[package]
name = "rp2040-volume-knob-rtic"
license = "Unlicense"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-halt= "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.3.0"

rp2040-monotonic = "1.0.0"
rp2040-hal = { version="0.4.0", features=["rt"] }
rp2040-boot2 = "0.2.0"

usb-device = "0.2.8"
usbd-hid = "0.6.0"

heapless = "0.7.13"

rotary-encoder-hal = { version = "0.5.0", features = ["table-decoder"] }


