[package]
name = "volume-control"
license = "Unlicense"
version = "0.2.1"
edition = "2021"

[features]
default = ["safe-muting"]
safe-muting = []
watchdog = []

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-halt= "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp2040-monotonic = "1.0.0"
rp2040-hal = { version="0.5.0", features=["rt"] }
rp2040-boot2 = "0.2.0"
rp-pico = "0.4.1"

usb-device = "0.2.8"
usbd-human-interface-device = "0.2.1"
frunk = { version = "0.4", default-features = false }
delegate = "0.7"
packed_struct = { version = "0.10", default-features = false }

rotary-encoder-hal = { version = "0.5.0", features = ["table-decoder"] }


